--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,16 @@ h1{
 	font-weight: bold;
 	color: white;
 }
+#yourtextfield{
+    margin-top: 500px;
+    margin-left: 20px;
+}
+
+#name-form{
+    margin-top: 900px;
+    margin-left: 200px;
+}
+
 
 
 #range{
@@ -42,10 +52,7 @@ h1{
             
 
 
-button{
-	margin-top: 700px;
-	margin-left: 10px;
-}
+
 
 #container{
 	margin-left: 200px;
@@ -54,3 +61,82 @@ button{
 #query{
 	margin-left: 200px;
 }
+
+
+#chatDisplay {
+    height: 150px;
+    width: 100%;
+    overflow: auto;
+    text-align: left;
+    border-radius: 10px;
+    background-color: white;
+    font-size: 1em;
+    color: black;
+    padding: 1em 1em 1em 1em;
+}
+
+.chatInput {
+    height: 150px;
+    border-radius: 10px;
+    background-color: white;
+}
+
+.chatLabel {
+    font-size: 1.5em;
+    color: black;
+    text-align: center;
+    font-weight: bold;
+    padding: 0.5em 0em 0.5em 0em;
+}
+
+#chat-input {
+    width: 60%;
+    height: 90px;
+    margin-left: 15px;
+    margin-right: 5px;
+    color: #b4c7df;
+    border-radius: 10px;
+    background-color: #D3D3D3;
+}
+
+#chat-input:focus {
+    color: black;
+    background-color: white;
+}
+
+#chat-send {
+    width: 20%;
+    height: 90px;
+    margin-left: 5px;
+    margin-right: 5px;
+    border-radius: 10px;
+    color: white;
+    font-weight: normal;
+    position: relative;
+    top: -40px;
+    background-color: black
+
+}
+
+.chatColor1 {
+    color: green;
+}
+
+.chatColor2 {
+    color: black;
+}
+
+.chatColorDisconnected {
+    color: green;
+    font-style: italic;
+}
+
+.chatColorJoined {
+    color: green;
+    font-style: italic;
+}
+
+
+
+
+
