--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,11 @@
 body{
 	background-image: url("../images/wd.jpeg");
+    background-position: cover;
 	
 	}
 
 
-h1{
-	font-weight: bold;
-	color: white;
-}
+
 #yourtextfield{
     margin-top: 500px;
     margin-left: 20px;
@@ -44,13 +42,31 @@ h1{
      z-index: 100;
             }
 
-#cow1, #cow2, #cow3 {z-index:500;}
+#cow1, #cow2, #zombie {z-index:500;}
 
-#cow1 {position:absolute; bottom:50px; left:;}
-#cow2 {position:absolute; bottom:50px; left:1100px;}
-#cow3 {position:absolute; bottom:50px; left:500px;}
-            
+#cow1 {
+    position:absolute; 
+    bottom:50px; 
+    left:;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
 
+}
+#cow2 {
+    position:absolute; 
+    bottom:50px; left:900px;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+}
+
+
+#zombie{
+    position: absolute;
+    bottom:50px;
+    left: 350px;
+    animation-duration: 5s;
+    animation-iteration-count: infinite;
+}
 
 
 
@@ -157,25 +173,124 @@ h1{
 
 }
 
-.chatColor1 {
-    color: green;
+
+
+/*Cloud Animations*/
+.cloud {
+    width: 200px; height: 60px;
+    background: #fff;
+    
+    border-radius: 200px;
+    -moz-border-radius: 200px;
+    -webkit-border-radius: 200px;
+    
+    position: relative; 
 }
 
-.chatColor2 {
-    color: black;
+.cloud:before, .cloud:after {
+    content: '';
+    position: absolute; 
+    background: #fff;
+    width: 100px; height: 80px;
+    position: absolute; top: -15px; left: 10px;
+    
+    border-radius: 100px;
+    -moz-border-radius: 100px;
+    -webkit-border-radius: 100px;
+    
+    -webkit-transform: rotate(30deg);
+    transform: rotate(30deg);
+    -moz-transform: rotate(30deg);
 }
 
-.chatColorDisconnected {
-    color: green;
-    font-style: italic;
+.cloud:after {
+    width: 120px; height: 120px;
+    top: -55px; left: auto; right: 15px;
 }
 
-.chatColorJoined {
-    color: green;
-    font-style: italic;
+/*Time to animate*/
+.x1 {
+    -webkit-animation: moveclouds 15s linear infinite;
+    -moz-animation: moveclouds 15s linear infinite;
+    -o-animation: moveclouds 15s linear infinite;
 }
 
+/*variable speed, opacity, and position of clouds for realistic effect*/
+.x2 {
+    left: 200px;
+    
+    -webkit-transform: scale(0.6);
+    -moz-transform: scale(0.6);
+    transform: scale(0.6);
+    opacity: 0.6; /*opacity proportional to the size*/
+    
+    /*Speed will also be proportional to the size and opacity*/
+    /*More the speed. Less the time in 's' = seconds*/
+    -webkit-animation: moveclouds 25s linear infinite;
+    -moz-animation: moveclouds 25s linear infinite;
+    -o-animation: moveclouds 25s linear infinite;
+}
 
+.x3 {
+    left: -250px; top: -200px;
+    
+    -webkit-transform: scale(0.8);
+    -moz-transform: scale(0.8);
+    transform: scale(0.8);
+    opacity: 0.8; /*opacity proportional to the size*/
+    
+    -webkit-animation: moveclouds 20s linear infinite;
+    -moz-animation: moveclouds 20s linear infinite;
+    -o-animation: moveclouds 20s linear infinite;
+}
+
+.x4 {
+    left: 470px; top: -250px;
+    
+    -webkit-transform: scale(0.75);
+    -moz-transform: scale(0.75);
+    transform: scale(0.75);
+    opacity: 0.75; /*opacity proportional to the size*/
+    
+    -webkit-animation: moveclouds 18s linear infinite;
+    -moz-animation: moveclouds 18s linear infinite;
+    -o-animation: moveclouds 18s linear infinite;
+}
+
+.x5 {
+    left: -150px; top: -150px;
+    
+    -webkit-transform: scale(0.8);
+    -moz-transform: scale(0.8);
+    transform: scale(0.8);
+    opacity: 0.8; /*opacity proportional to the size*/
+    
+    -webkit-animation: moveclouds 20s linear infinite;
+    -moz-animation: moveclouds 20s linear infinite;
+    -o-animation: moveclouds 20s linear infinite;
+}
+
+@-webkit-keyframes moveclouds {
+    0% {margin-left: 1000px;}
+    100% {margin-left: -1000px;}
+}
+@-moz-keyframes moveclouds {
+    0% {margin-left: 1000px;}
+    100% {margin-left: -1000px;}
+}
+@-o-keyframes moveclouds {
+    0% {margin-left: 1000px;}
+    100% {margin-left: -1000px;}
+}
+
+/*End Cloud Animations*/
+
+
+/*Media Buttons Styling*/
+.mediabuttons {
+    text-align: center;
+}
+/*End Media Buttons Styling*/
 
 
 
